@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-21-2
+DATE: 07/19/2022
+STAFF: sc
+wts2-896/crm-306
+weekly/MRK_QTLCandidateGene.py
+
 TAG: qcreports_db-6-0-21-1
 DATE: 07/18/2022
 STAFF: lec
